Fixed the spelling, text alignment, styled navba and added links to sitemap

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,22 +1,32 @@
 #navigation {
-    list-style: none;
-    background:white;
-    overflow: hidden;
-    width: 500px;
-}
-#navigation li {
-    float: left;
-    border-right: solid 1 white;
-    height: 35px;
-}
-#navigation li a:link, #navigation li a:visited {
-    text-decoration: none;
-    display: block;
-    height: 35px;
-    color: black;
-    line-height: 35px;
-    padding: 0 10px 0 10px;
-    border-right: solid 1px#666;
-    font-size: 20px;
-    font-weight: bold;
-}
+    display:flex;
+     width: 100%;
+     height: 45px;
+     background: white;
+     border: solid 1px black;
+     border-radius: 28px;
+     text-align: center;
+     justify-content: center;
+   }
+   
+   li:not(.different) {
+     display: inline;
+     text-transform: uppercase;
+     text-decoration: none;
+     transition: .3s;
+     padding: 20px;
+     font-size: 30px;
+     position: relative;
+     top: -15px;
+     left: -20px;
+   }
+   
+   li:hover:not(.different) {
+     text-shadow: 1px 1px 1px #aaa;
+     font-size: 25px;
+   }
+   
+   a:not(.different) {
+     text-decoration: none;
+     color: black;
+   }
